--- a/MageWars/res/layout/activity_book.xml
+++ b/MageWars/res/layout/activity_book.xml
@@ -6,15 +6,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".BookActivity" >
 
-    <ListView
-        android:id="@+id/listviewBook"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/BOOK_titulo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" >
-                
-    </ListView>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="34dp"
+        android:text="@string/titulo_book"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
